--- a/src/server/views/base.jade
+++ b/src/server/views/base.jade
@@ -1,11 +1,20 @@
-html(lang="en")
-    head
-        meta(charset="utf-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge")
-        meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no")
+html
+head
+    meta(charset="utf-8")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge")
+    meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no")
 
-        title!= title
-    body
-        div.container-fluid
-                div#mainDiv
-        script(src="/js/main.js")
+    title!= title
+
+    script(type='text/javascript').
+        var myInit = function () {
+            console.log('myInit function was called');
+            // you can use GME.classes.Client from this point
+            console.log(GME);
+            // TODO: add some client examples
+        };
+    script(type='text/javascript', src='/extlib/node_modules/webgme/dist/webgme.classes.build.js')
+body(on-gme-init='myInit()')
+    div.container-fluid
+        div#mainDiv
+    script(src='/js/main.js')
