skipped player login now tictactoe has its own page (intermediate) tictactoe is completely controlled by the model!!! :)

--- a/src/server/views/base.jade
+++ b/src/server/views/base.jade
@@ -7,7 +7,7 @@ head
     title!= title
     script( type='text/javascript').
         function initGME() {
-            console.log('yeah');
+            console.log('gme-downloaded');
         };
 
 body(on-gme-init='initGME()')
