--- a/src/server/views/base.jade
+++ b/src/server/views/base.jade
@@ -12,12 +12,13 @@ head
 
 body(on-gme-init='initGME()')
     div.container-fluid
-        div#mainDiv
-        div#mainFooter
-            a(ref='license', href='http://creativecommons.org/licenses/by-sa/4.0/')
-                img(alt='Creative Commons License', style='border-width:0' src='https://i.creativecommons.org/l/by-sa/4.0/80x15.png')
-            br
-            This work is licensed under a
-            a(rel='license', href='http://creativecommons.org/licenses/by-sa/4.0/')
-                Creative Commons Attribution-ShareAlike 4.0 International License
+        div#mainDiv.col-sm-12
+        div#mainFooter.col-sm-12
+            | Icons made by&nbsp;
+            a(href='http://www.freepik.com', title='Freepik') Freepik
+            |  from&nbsp;
+            a(href='http://www.flaticon.com', title='Flaticon') www.flaticon.com
+            |  is licensed by&nbsp;
+            a(href='http://creativecommons.org/licenses/by/3.0/', title='Creative Commons BY 3.0', target='_blank') CC 3.0 BY
+
     script(src='/js/main.js')
